# physicsFrmwk

./: Makefile.in  README.md  autogen.sh  configure  configure.ac  libtool
src/: Makefile  Makefile.am  Makefile.in  build.sh  physics.hpp
src/aux/: ThreadPool.h  logger.cpp  logger.hpp  math.hpp  ocl.cpp  ocl.hpp  octree.cpp  octree.hpp  octree.tpp  slotmap.cpp  slotmap.hpp  threadpool.cpp  threadpool.hpp
src/particles/: forceGenerators.cpp  forceGenerators.hpp  pForceGen.cpp  pForceGen.hpp  pForceGens.cpp  pForceGens.hpp  pMngr.cpp  pMngr.hpp  pWorld.cpp  pWorld.hpp  particle.cpp  particle.hpp
src/samples/massSpring/: massSpring.cpp
src/samples/solarSystem/: build.sh  solarSystem.cpp
