#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([physicsFrmwk], [0.1], [k17k47@gmail.com])
AC_CONFIG_SRCDIR([src/physics.hpp])

LT_PREREQ([2.4])
LT_INIT

AM_INIT_AUTOMAKE([subdir-objects])

# Checks for programs.
AC_PROG_CXX

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
