lib_LTLIBRARIES = libphysics.la
libphysics_la_SOURCES = aux/logger.cpp aux/ocl.cpp particles/forceGenerators.cpp particles/particle.cpp particles/pForceGens.cpp particles/pMngr.cpp particles/pWorld.cpp
libphysics_la_CPPFLAGS = -I./
libphysics_la_CXXFLAGS = -fPIC -std=c++11
libphysics_la_LDFLAGS = -pthread
